--- a/style.css
+++ b/style.css
@@ -44,13 +44,12 @@
   li {
     margin-left: 20px;
   }
-  
+
   .box img {
-    background-color: rgba(225, 225, 232, 0.8); /* Biru dengan 80% opacity */
-    width: 350px;
     height: 400px;
     border-radius: 25%;
     box-shadow: 5px 5px 5px #aeb0ae, -5px -5px 5px #aeb0ae;
+    background-size: cover;
   }
   
   /* project */
@@ -73,7 +72,12 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  
+    
+
   }
+
+ 
 
   @media (max-width: 576px) {
     .text{
